# OOP-Project

./: CMakeLists.txt  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Health.cpp  Health.h  Player.cpp  Player.h  README.md  main.cpp
.github/workflows/: cmake.yml
src/core/: Button.cpp  Button.h  Exceptions.h  Game.cpp  Game.h  Menu.cpp  Menu.h  ResourceManager.cpp  ResourceManager.h  main.cpp  pch.cpp  pch.h
src/entities/: Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Goomba.cpp  Goomba.h  Koopa.cpp  Koopa.h  Player.cpp  Player.h
